# bot

./: .gitignore  PLAN.md  PLAN0.md  PLAN1.md  PLAN2.md  PLAN3.md  PLAN4.md  PLAN5.md  PLAN6.md  PLAN7.md  PLAN8.md  PLAN9.md  README.md  agent  pyproject.toml  requirements.txt
.cursor/: worktrees.json
.cursor/rules/: audit.mdc  cli.mdc  coding-standards.mdc  context.mdc  git-workflow.mdc  git.mdc  hardening.mdc  interfaces.mdc  roles.mdc  shell.mdc  standards.mdc  testing.mdc  validation.mdc  vibe-coding.mdc  workflow.mdc
.cursor/skills/crypto-ops/: SKILL.md
agent_rules/: context.md  core-constitution.md  crypto-earn.md  crypto.md  database.md  development-impl.md  development.md  git.md  hardware.md  memory.md  models.md  multiagent.md  prompts.md  self-improvement.md  shell.md
agent_rules/runtime/: autonomy.md
src/: cli.py
src/agent/: config.py  core.py  db.py  log.py
src/agent/models/: __init__.py  (+4 more)
src/cli_commands/: __init__.py  info.py  lint.py  tests.py
src/llm/: __init__.py  budget.py  cache.py  client.py  errors.py
src/utils/: _lint_config.py  _lint_core.py  _lint_fs.py  _lint_report.py  _lint_secrets.py  _lint_types.py  lint.py
tests/: conftest.py
tests/agent/: conftest.py  test_config.py  test_core.py  test_db.py  test_handlers.py  test_log.py  test_models_budget.py  test_models_config.py  test_models_events.py  test_models_tasks.py
tests/cli/: test_commands.py
tests/llm/: conftest.py  test_api_key.py  test_budget.py  test_cache.py  test_client.py  test_client_retry.py  test_llm.py
tests/utils/: test_lint.py  test_lint_integration.py
(+7 files in other folders)
