[project]
name = "50bucks"
version = "0.1.0"
description = "Autonomous AI agent on Raspberry Pi 4"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "peewee>=4.0.0",
    "pathspec>=0.12.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
]

[project.scripts]
agent = "src.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.agent-lint.src]
lines = 200
functions = 7
classes = 3
func_lines = 50
imports = 15

[tool.agent-lint.tests]
lines = 300
functions = 25
classes = 5
func_lines = 50
imports = 15

[tool.agent-lint.docs]
lines = 150
